--- a/src/cuda/CMakeLists.txt
+++ b/src/cuda/CMakeLists.txt
@@ -18,12 +18,5 @@ include_directories(${PYTHON_INCLUDE_PATH})
 set_source_files_properties(cfunc_fourierrec.i PROPERTIES CPLUSPLUS ON)
 swig_add_library(cfunc_fourierrec LANGUAGE python SOURCES cfunc_fourierrec.i cfunc_fourierrec.cu)
 swig_link_libraries(cfunc_fourierrec cudart cufft)
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/cfunc_fourierrec.py" DESTINATION tomovector)
-install(TARGETS cfunc_fourierrec LIBRARY DESTINATION tomovector)
-
-# Must tell CMake that SWIG interface files are CXX files
-set_source_files_properties(cfunc_linerec.i PROPERTIES CPLUSPLUS ON)
-swig_add_library(cfunc_linerec LANGUAGE python SOURCES cfunc_linerec.i cfunc_linerec.cu)
-swig_link_libraries(cfunc_linerec cudart)
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/cfunc_linerec.py" DESTINATION tomovector)
-install(TARGETS cfunc_linerec LIBRARY DESTINATION tomovector)
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/cfunc_fourierrec.py" DESTINATION tomo)
+install(TARGETS cfunc_fourierrec LIBRARY DESTINATION tomo)
